#ifndef ASSIGNMENT12_HANDEVALUATOR_H
#define ASSIGNMENT12_HANDEVALUATOR_H

#include "Hand.h"

struct HandEvaluator
{
    static unsigned evaluate(const Hand &hand);
};

#endif // ASSIGNMENT12_HANDEVALUATOR_H
