#ifndef ASSIGNMENT12_FACE_H
#define ASSIGNMENT12_FACE_H

enum class Face : int
{
    TWO = 2,
    THREE = 3,
    FOUR = 4,
    FIVE = 5,
    SIX = 6,
    SEVEN = 7,
    EIGHT = 8,
    NINE = 9,
    TEN = 10,
    JACK = 11,
    QUEEN = 12,
    KING = 13,
    ACE = 14
};

#endif // ASSIGNMENT12_FACE_H
