#ifndef ASSIGNMENT12_SUIT_H
#define ASSIGNMENT12_SUIT_H

enum class Suit : char
{
    SPADES = 'S',
    CLUBS = 'C',
    HEARTS = 'H',
    DIAMONDS = 'D'
};

#endif // ASSIGNMENT12_SUIT_H
